Player to rigidbody, Many Changes
AI Behaviour, Player to rigidbody, some misc changes

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.nomnom.raycast-visualization": "https://github.com/nomnomab/RaycastVisualization.git",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.addressables": "1.21.21",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.3.1",
