--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ ignore.conf
 .plastic/plastic.fullycheckeddirectories
 .plastic/cachedtrees/56e62dd7-241f-41e9-8c6b-dd4ca4513e62.1
 /Assets/Maps
+/Assets/Plugins
