--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,10 +7,10 @@
     "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.formats.fbx": "4.2.1",
-    "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.splines": "2.5.2",
     "com.unity.terrain-tools": "5.0.5",
