--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.project-auditor": "1.0.0",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.splines": "2.5.2",
     "com.unity.terrain-tools": "5.0.5",
